Add skipdryrun to monitor

--- a/tenants/product-catalog/argocd/root/base/values.yaml
+++ b/tenants/product-catalog/argocd/root/base/values.yaml
@@ -53,6 +53,8 @@ applications:
         maxDuration: 3m
 
   product-catalog-monitor:
+    annotations:
+      argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     destination:
       namespace: product-catalog-monitor
     source:
