--- a/components/apps/kyverno/overlays/policies/kustomization.yaml
+++ b/components/apps/kyverno/overlays/policies/kustomization.yaml
@@ -6,4 +6,5 @@ resources:
 - validate-probes-policy.yaml
 - require-requests-limits-policy.yaml
 - disallow-anyuid-scc-policy.yaml
+- require-tls-routes.yaml
 # - verify-signed-images.yaml
