--- a/components/apps/camel-k-operator/base/subscription.yaml
+++ b/components/apps/camel-k-operator/base/subscription.yaml
@@ -4,7 +4,7 @@ metadata:
   name: red-hat-camel-k
   namespace: openshift-operators
 spec:
-  channel: 1.6.x
+  channel: latest
   installPlanApproval: Automatic
   name: red-hat-camel-k
   source: redhat-operators
