--- a/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
+++ b/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
@@ -11,9 +11,9 @@ spec:
       containers:
         - image: mage-registry.openshift-image-registry.svc:5000/openshift/cli:latest
           envFrom:
-          - configRef:
+          - configMapRef:
               name: roxsecret-namespaces
-        - command:
+          command:
           - /bin/bash
           - -c
           - |
