--- a/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-sa-rbac.yaml
+++ b/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-sa-rbac.yaml
@@ -1,8 +1,9 @@
-apiVersion: rbac.authorization.k8s.io/v1
+apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: postsync-create-roxsecrets
 ---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   annotations:
