Fix image reference

--- a/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
+++ b/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
@@ -9,7 +9,7 @@ spec:
   template:
     spec:
       containers:
-        - image: mage-registry.openshift-image-registry.svc:5000/openshift/cli:latest
+        - image: image-registry.openshift-image-registry.svc:5000/openshift/cli:latest
           envFrom:
           - configMapRef:
               name: roxsecret-namespaces
