--- a/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
+++ b/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: postsync-create-roxsecrets-job
+  namespace: stackrox
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
