--- a/components/apps/acs-operator/overlays/oauth/postsync-roxsecret-namespaces.yaml
+++ b/components/apps/acs-operator/overlays/oauth/postsync-roxsecret-namespaces.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
-data:
-  NAMESPACES: product-catalog-cicd
 kind: ConfigMap
 metadata:
   name: roxsecret-namespaces
+  namespace: stackrox
+data:
+  NAMESPACES: product-catalog-cicd
