--- a/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-sa-rbac.yaml
+++ b/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-sa-rbac.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: postsync-create-roxsecrets
+  namespace: stackrox
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -9,6 +10,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
   name: postsync-create-roxsecrets
+  namespace: stackrox
 rules:
   - apiGroups:
       - ""
@@ -29,3 +31,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: postsync-create-roxsecrets
+    namespace: stackrox
