Fix chopped line

--- a/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
+++ b/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
@@ -32,7 +32,7 @@ spec:
                 echo "Made attempt $attempt_counter, waiting..."
                 sleep 10
             done
-            CENTRAL_URL="`oc -n stackrox get route central -o
+            CENTRAL_URL="`oc -n stackrox get route central -o go-template='{{.spec.host}}'`"
 
             for i in ${NAMESPACES//,/ }
             do
