Include password secret

--- a/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
+++ b/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
@@ -11,6 +11,12 @@ spec:
     spec:
       containers:
         - image: image-registry.openshift-image-registry.svc:5000/openshift/cli:latest
+          env:
+          - name: PASSWORD
+            valueFrom:
+              secretKeyRef:
+                key: password
+                name: central-htpasswd
           envFrom:
           - configMapRef:
               name: roxsecret-namespaces
@@ -22,7 +28,7 @@ spec:
             attempt_counter=0
             max_attempts=20
             echo "Waiting for central to be available..."
-            until $(curl -k --output /dev/null --silent --head --fail https://central); do
+            until $(curl -k --output /dev/null --silent --head --fail https://$CENTRAL_URL); do
                 if [ ${attempt_counter} -eq ${max_attempts} ];then
                   echo "Max attempts reached"
                   exit 1
