--- a/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
+++ b/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
@@ -28,7 +28,7 @@ spec:
             attempt_counter=0
             max_attempts=20
             echo "Waiting for central to be available..."
-            until $(curl -k --output /dev/null --silent --head --fail https://$CENTRAL_URL); do
+              until $(curl -k --output /dev/null --silent --head --fail https://$CENTRALURL); do
                 if [ ${attempt_counter} -eq ${max_attempts} ];then
                   echo "Max attempts reached"
                   exit 1
