--- a/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
+++ b/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
@@ -38,9 +38,11 @@ spec:
               echo "Made attempt $attempt_counter, waiting..."
               sleep 10
             done
+            echo "Central available, creating secrets in namespaces $NAMESPACES"
 
-            for i in ${NAMESPACES//,/ }
+            ffor i in ${NAMESPACES//,/ }
             do
+              echo "Creating secret for $NAMESPACES"
               # If secret already exists, don't regenerate.
               if [[ -n `oc get secret roxsecrets -n $NAMESPACE 2>/dev/null` ]] ;
               then
