--- a/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
+++ b/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
@@ -38,9 +38,13 @@ spec:
               echo "Made attempt $attempt_counter, waiting..."
               sleep 10
             done
-            echo "Central available, creating secrets in namespaces $NAMESPACES"
 
-            ffor i in ${NAMESPACES//,/ }
+            API_ENDPOINT="/v1/apitokens/generate"
+            CENTRAL_URL_API="https://$CENTRAL_URL$API_ENDPOINT"
+            echo "Central API endpoint: $CENTRAL_URL_API"
+            echo "Creating secrets in namespaces $NAMESPACES"
+
+            for i in ${NAMESPACES//,/ }
             do
               echo "Creating secret for $NAMESPACES"
               # If secret already exists, don't regenerate.
@@ -50,11 +54,7 @@ spec:
                   continue
               fi
               go-template='{{.spec.host}}'`"
-              API_ENDPOINT="/v1/apitokens/generate"
-              CENTRAL_URL_API="https://$CENTRAL_URL$API_ENDPOINT"
-              echo "$CENTRAL_URL_API"
-              PAYLOAD="{\"name\": \"$NAMESPACE\", \"role\": \"Continuous
-              Integration\"}"
+              PAYLOAD="{\"name\": \"$NAMESPACE\", \"role\": \"Continuous Integration\"}"
               echo "$PAYLOAD"
               echo "Generate new token."
               RESPONSE=$(curl -k \
@@ -63,7 +63,8 @@ spec:
                 --data "$PAYLOAD" \
                 $CENTRAL_URL_API)
               TOKEN=$(jq -r '.token' <<< "$RESPONSE")
-              # Create secret in target namespace.
+
+              # Create secret in target namespace
               oc create secret generic roxsecrets \
                 --from-literal=rox_central_endpoint=$CENTRAL_URL:443 \
                 --from-literal=rox_api_token=$TOKEN \
