--- a/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
+++ b/components/apps/acs-operator/overlays/oauth/postsync-create-roxsecrets-job.yaml
@@ -44,7 +44,7 @@ spec:
             echo "Central API endpoint: $CENTRAL_URL_API"
             echo "Creating secrets in namespaces $NAMESPACES"
 
-            for i in ${NAMESPACES//,/ }
+            for NAMESPACE in ${NAMESPACES//,/ }
             do
               echo "Creating secret for $NAMESPACES"
               # If secret already exists, don't regenerate.
