--- a/tenants/acs-tokens/base/postsync-create-roxsecrets-job.yaml
+++ b/tenants/acs-tokens/base/postsync-create-roxsecrets-job.yaml
@@ -10,7 +10,7 @@ spec:
   template:
     spec:
       containers:
-        - image: image-registry.openshift-image-registry.svc:5000/openshift/cli:latest
+        - image: quay.io/gnunn/tools:4.10-1
           env:
           - name: PASSWORD
             valueFrom:
