--- a/tenants/acs-tokens/base/postsync-roxsecret-namespaces.yaml
+++ b/tenants/acs-tokens/base/postsync-roxsecret-namespaces.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: stackrox
 data:
   NAMESPACES: product-catalog-cicd,tools-practicetest
-  CENTRAL_URL: central
+  CENTRAL_URL: central.stackrox.svc
