Add OPA to ACM Hub

--- a/components/apps/acm/overlays/config-policies/kustomization.yaml
+++ b/components/apps/acm/overlays/config-policies/kustomization.yaml
@@ -9,4 +9,4 @@ resources:
 - gatekeeper-exclude-namespaces.yaml
 - gatekeeper-probes-livenessnotset.yaml
 - gatekeeper-probes-readinessnotset.yaml
-- policy-check-reports.yaml
+# - policy-check-reports.yaml
