--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -36,12 +36,12 @@ applications:
     source:
       path: components/apps/acm/overlays/aggregate
 
-  # acm-config-policies:
-  #   annotations:
-  #     # Install after ACM
-  #     argocd.argoproj.io/sync-wave: '22'
-  #   source:
-  #     path: components/apps/acm/overlays/config-policies
+  acm-config-policies:
+    annotations:
+      # Install after ACM
+      argocd.argoproj.io/sync-wave: '22'
+    source:
+      path: components/apps/acm/overlays/config-policies
 
   banner:
     annotations:
