Remove practicetest-tools

--- a/tenants/acs-tokens/base/postsync-roxsecret-namespaces.yaml
+++ b/tenants/acs-tokens/base/postsync-roxsecret-namespaces.yaml
@@ -4,5 +4,5 @@ metadata:
   name: roxsecret-namespaces
   namespace: stackrox
 data:
-  NAMESPACES: product-catalog-cicd,tools-practicetest
+  NAMESPACES: product-catalog-cicd
   CENTRAL_URL: central.stackrox.svc
