Update storage class for ODF LVM

--- a/clusters/local.home/apps/openshift-monitoring/base/cluster-monitoring-config-cm.yaml
+++ b/clusters/local.home/apps/openshift-monitoring/base/cluster-monitoring-config-cm.yaml
@@ -11,7 +11,7 @@ data:
        spec:
          accessModes:
          - ReadWriteOnce
-         storageClassName: csi-driver-lvm-linear
+         storageClassName: odf-lvm-vg
          volumeMode: Filesystem
          resources:
            requests:
