--- a/components/apps/pipelines-operator/overlays/chains/kustomization.yaml
+++ b/components/apps/pipelines-operator/overlays/chains/kustomization.yaml
@@ -2,18 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- ../../base
 - openshift-pipelines-namespace.yaml
 - signing-secrets.yaml
 - chains-config-cm.yaml
-- github.com/redhat-cop/gitops-catalog/openshift-pipelines-operator/overlays/stable
 - tekton-chain.yaml
-
-patches:
-# Patch create-local-pipeline account job environment variables
-- patch: |-
-    - op: replace
-      path: /spec/channel
-      value: pipelines-1.7
-  target:
-    kind: Subscription
-    name: openshift-pipelines-operator
