Add pipeline local account in CR instead of patching

--- a/components/apps/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/apps/gitops-operator/base/gitops-operator-cr.yaml
@@ -11,6 +11,8 @@ spec:
       value: "350"
   dex:
     openShiftOAuth: true
+  extraConfig:
+    accounts.pipeline: apiKey
   applicationInstanceLabelKey: argocd.argoproj.io/instance
   applicationSet: {}
   kustomizeBuildOptions: "--enable-helm"
