Patch cluster specific endpoint

--- a/clusters/local.home/argocd/bootstrap/values.yaml
+++ b/clusters/local.home/argocd/bootstrap/values.yaml
@@ -48,7 +48,7 @@ applications:
       argocd.argoproj.io/compare-options: IgnoreExtraneous
       argocd.argoproj.io/sync-wave: '61'
     source:
-      path: tenants/acs-tokens/base
+      path: clusters/local.home/apps/acs-tokens/overlays/endpoint
 
   authentication:
     annotations:
