Forgot to omit protocol

--- a/clusters/local.home/apps/acs-tokens/overlays/endpoint/kustomization.yaml
+++ b/clusters/local.home/apps/acs-tokens/overlays/endpoint/kustomization.yaml
@@ -8,5 +8,5 @@ patches:
     patch: |-
       - op: replace
         path: /data/CENTRAL_URL
-        value: https://central-stackrox.apps.home.ocplab.com
+        value: central-stackrox.apps.home.ocplab.com
       
