Add default annotations for argo notifications, need to update helm chart to support

--- a/clusters/default/argocd/bootstrap/values.yaml
+++ b/clusters/default/argocd/bootstrap/values.yaml
@@ -1,5 +1,8 @@
 default:
   app:
+    annotations:
+      notifications.argoproj.io/subscribe.on-sync-failed.slack: cluster-gitops
+      notifications.argoproj.io/subscribe.on-health-degraded.slack: cluster-gitops
     enabled: true
     enableAutoSync: true
     autoSyncPrune: false
