Update loki for 5.5 GA

--- a/components/apps/loki/instance/base/clusterlogging.yaml
+++ b/components/apps/loki/instance/base/clusterlogging.yaml
@@ -5,7 +5,8 @@ metadata:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
   name: instance
 spec:
+  logStore:
+    lokistack:
+      name: logging-loki
   collection:
-    logs:
-      fluentd: {}
-      type: fluentd
+    type: vector      
