--- a/components/apps/loki/instance/base/lokistack.yaml
+++ b/components/apps/loki/instance/base/lokistack.yaml
@@ -7,6 +7,9 @@ metadata:
 spec:
   size: 1x.extra-small
   storage:
+    schemas:
+      - effectiveDate: '2022-06-01'
+        version: v12  
     secret:
       name: loki-storage
       type: s3
