Missed updating name in page for ingestion limits

--- a/components/apps/loki/instance/overlays/sno/kustomization.yaml
+++ b/components/apps/loki/instance/overlays/sno/kustomization.yaml
@@ -13,8 +13,8 @@ patches:
       value: 1x.extra-small
   target:
     kind: LokiStack
-    name: lokistack
+    name: logging-loki
 - path: ingestion-rate-patch.yaml
   target:
     kind: LokiStack
-    name: lokistack
+    name: logging-loki
