--- a/clusters/local.home/apps/cluster-certs/overlays/all/kustomization.yaml
+++ b/clusters/local.home/apps/cluster-certs/overlays/all/kustomization.yaml
@@ -2,5 +2,6 @@ kind: Kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 
 resources:
+- ../../../../../../components/apps/cert-manager-operator/overlays/letsencrypt
 - ../openshift-api-cert
 - ../openshift-wildcard-cert
