--- a/clusters/aws.cluster/apps/cluster-certs/overlays/all/kustomization.yaml
+++ b/clusters/aws.cluster/apps/cluster-certs/overlays/all/kustomization.yaml
@@ -1,6 +1,9 @@
 kind: Kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 
+commonAnnotations:
+  argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
+
 resources:
 - ../../../../../../components/apps/cert-manager-operator/overlays/letsencrypt
 - ../openshift-api-cert
