--- a/clusters/aws.cluster/argocd/bootstrap/values.yaml
+++ b/clusters/aws.cluster/argocd/bootstrap/values.yaml
@@ -35,7 +35,7 @@ applications:
     destination:
       namespace: openshift-cert-manager-operator
     source:
-      path: clusters/local.home/apps/cluster-certs/overlays/all
+      path: clusters/aws.cluster/apps/cluster-certs/overlays/all
 
   kyverno:
     annotations:
