Force cert-manager to use public zone by specifying ZoneID

--- a/components/apps/cert-manager-operator/overlays/letsencrypt/kustomization.yaml
+++ b/components/apps/cert-manager-operator/overlays/letsencrypt/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
 - ../../base
 - instance-namespace.yaml
 - letsencrypt-aws-sealed-secret.yaml
+- letsencrypt-staging-cluster-issuer.yaml
 - letsencrypt-prod-cluster-issuer.yaml
