Update DNS names

--- a/clusters/aws.cluster/apps/cluster-certs/overlays/openshift-api-cert/patch-cluster-api-cert-job.yaml
+++ b/clusters/aws.cluster/apps/cluster-certs/overlays/openshift-api-cert/patch-cluster-api-cert-job.yaml
@@ -51,7 +51,7 @@ spec:
         - image: image-registry.openshift-image-registry.svc:5000/openshift/cli:latest
           env:
             - name: API_HOST_NAME
-              value: api.cluster.ocplab.com
+              value: api.cluster.ocplab-aws.com
           command:
             - /bin/bash
             - -c
