Test fix didn't work, reset back to ocplab.com

--- a/clusters/aws.cluster/apps/cluster-certs/overlays/openshift-wildcard-cert/openshift-wildcard-certificate.yaml
+++ b/clusters/aws.cluster/apps/cluster-certs/overlays/openshift-wildcard-cert/openshift-wildcard-certificate.yaml
@@ -8,6 +8,6 @@ spec:
   issuerRef:
     name: letsencrypt-prod
     kind: ClusterIssuer
-  commonName: '*.apps.cluster.ocplab-aws.com'
+  commonName: '*.apps.cluster.ocplab.com'
   dnsNames:
-  - '*.apps.cluster.ocplab-aws.com'
+  - '*.apps.cluster.ocplab.com'
