--- a/components/apps/certificates/base/patch-cluster-wildcard-cert-job.yaml
+++ b/components/apps/certificates/base/patch-cluster-wildcard-cert-job.yaml
@@ -30,16 +30,19 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: patch-cluster-wildcard-cert
+    namespace: openshift-ingress
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: patch-cluster-wildcard-cert
+  namespace: openshift-ingress
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: patch-cluster-wildcard-cert
+  namespace: openshift-ingress
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
