--- a/components/apps/certificates/base/patch-cluster-api-cert-job.yaml
+++ b/components/apps/certificates/base/patch-cluster-api-cert-job.yaml
@@ -31,16 +31,19 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: patch-cluster-api-cert
+    namespace: openshift-config
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: patch-cluster-api-cert
+  namespace: openshift-config
 ---
 apiVersion: batch/v1
 kind: Job
 metadata:
   name: patch-cluster-api-cert
+  namespace: openshift-config
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
