Update certs for aws cluster

--- a/clusters/aws.cluster/argocd/bootstrap/values.yaml
+++ b/clusters/aws.cluster/argocd/bootstrap/values.yaml
@@ -35,7 +35,15 @@ applications:
     destination:
       namespace: openshift-cert-manager-operator
     source:
-      path: clusters/aws.cluster/apps/cluster-certs/overlays/all
+      path: components/apps/cert-manager-operator/aggregate/overlays/letsencrypt
+
+  certificates:
+    annotations:
+      argocd.argoproj.io/sync-wave: "3"
+    destination:
+      namespace: openshift-cert-manager
+    source:
+      path: clusters/aws.cluster/apps/cluster-certs/overlays/home
 
   kyverno:
     annotations:
