Update spec for sso.dex instead of just dex

--- a/components/apps/gitops-operator/base/gitops-operator-cr.yaml
+++ b/components/apps/gitops-operator/base/gitops-operator-cr.yaml
@@ -9,8 +9,9 @@ spec:
       value: "350"
     - name: "ARGOCD_K8S_CLIENT_QPS"
       value: "350"
-  dex:
-    openShiftOAuth: true
+  sso:
+    dex:
+      openShiftOAuth: true
   extraConfig:
     accounts.pipeline: apiKey
   applicationInstanceLabelKey: argocd.argoproj.io/instance
